App Soccer FE | Fix play tournament button icon not centered on mobile

--- a/src/app/components/play-tournament-dashboard/play-tournament-dashboard.component.scss
+++ b/src/app/components/play-tournament-dashboard/play-tournament-dashboard.component.scss
@@ -64,5 +64,8 @@
     right: 2%;
     height: 45px;
     width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
